--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
         
         <h1>Student Registration Form</h1>
         <label for="Name">Enter Name :</label>
-        <input id="Name" type="text" placeholder="Enter Your Name">
+        <input id="Name" type="text" class="input-field" placeholder="Enter Your Name">
         <br>
         <label for="Fname">Father's name :</label>
-        <input id="Fname" type="text">
+        <input id="Fname" class="input-field" type="text">
         <br>
         <label for="Mname">Mother's Name :</label>
-        <input id="Mname" type="text">
+        <input id="Mname" class="input-field" type="text">
         <br>
         <label for="Email">Enter E-Mail :</label>
-        <input id="Email" type="email" placeholder="xyz@abc.com">
+        <input id="Email" class="input-field" type="email" placeholder="xyz@abc.com">
         <br>
         <label for="Phone">Enter Phone Number :</label>
-        <input id="Phone" type="number" placeholder="9999xxxxxx">
+        <input id="Phone" class="input-field" type="number" placeholder="9999xxxxxx">
         <br>
         <label for="DOB">Enter Date of Birth :</label>
-        <input id="DOB" type="date">
+        <input id="DOB" class="input-field" type="date">
         <br>
         <label for="Gender">Select Gender :</label>
-        <input id="Gender" name="gender" type="radio">Male</input>
+        <input id="Gender" class="input-field" name="gender" type="radio">Male</input>
         <input id="Gender" name="gender" type="radio">Female</input>
         <input id="Gender" name="gender" type="radio">Other</input>
         <br>
         <label for="Blood">Select Blood Group :</label>
-        <select name="Blood" id="Blood">
+        <select name="Blood" class="input-field" id="Blood">
             <option value="A+">A+</option>
             <option value="A+">B+</option>
             <option value="A+">AB+</option>
@@ -51,7 +51,7 @@
         </select>
         <br>
         <label for="Hobby">Select Hobbies :</label>
-        <input name="Hobby" type="checkbox" id="Hobby">Dancing</input>
+        <input name="Hobby" class="input-field" type="checkbox" id="Hobby">Dancing</input>
         <input name="Hobby" type="checkbox" id="Hobby">Singing</input>
         <input name="Hobby" type="checkbox" id="Hobby">Swimming</input>
         <br>
@@ -72,8 +72,8 @@
         <label for="Photo">Upload Photo</label>
         <input id="Photo" type="file">
         <br>
-        <input type="submit">
-        <input type="reset">
+        <input type="submit" class="mt">
+        <input type="reset" class="mt">
         <br>    
     </form>
 
