--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
         <input id="Email" class="input-field" type="email" placeholder="xyz@abc.com">
         <br>
         <label for="Phone">Enter Phone Number :</label>
-        <input id="Phone" class="input-field" type="number" placeholder="9999xxxxxx">
+        <input id="Phone" class="input-field" type="tel" placeholder="9999xxxxxx">
         <br>
         <label for="DOB">Enter Date of Birth :</label>
         <input id="DOB" class="input-field" type="date">
+        <br>
+        <label for="Address">Enter Address :</label>
+        <input id="Address" class="input-field" type="text">
         <br>
         <label for="Gender">Select Gender :</label>
         <input id="Gender" class="input-field" name="gender" type="radio">Male</input>
