--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
        <h1 id="head">This is a Fixed Header</h1>
     </header>
-
+    <hr>
     <form id="form" action="" method="post">
         
         <h1>Student Registration Form</h1>
@@ -79,7 +79,7 @@
         <input type="reset" class="mt">
         <br>    
     </form>
-
+    <hr>
     <table id="table">
         <tr id="col">
             <th>S.No</th>
@@ -114,5 +114,48 @@
             <td>Gaming</td>
         </tr>
     </table>
+    <hr>
+    <h1 class="Demo">Demo demonstrating position, float, display and Visibility concepts.</h1>
+    <hr>
+    <div class="Dposition">
+        <h2>Position concept</h2>
+        <div class="static">
+            This element has position as static hence margin properties are not visible;
+            </div>
+        <div class="relative">
+            This div element has position as relative hence left margin is applied;
+            </div>
+    </div>
+    <hr>
+    <div class="float">
+        <h2>Float concept </h2>
+        <div class="left">
+            Float : left
+        </div>
+        <div class="right">
+            Float : Right
+        </div>
+    </div>
+    <hr>
+    <div class="display">
+        <h2>Display Concepts</h2>
+        <div id="inline">
+            <p>This is a <span>span element </span>
+                , <b>Bold Tag and </b>this is a
+                <a href="#">link tag</a> which are examples
+                of inline elements which occupy only
+                sufficient width.</p>
+        </div>
+        <div id="block">
+            <p>This is <p>a paragraph tag</p> which is a block elemnt and <h3>heading tag also a block element</h3></p>
+        </div>
+    </div>
+    <hr>
+    <div class="visibility">
+        <h2>Visibility Concept</h2>
+        <h3 class="a">This heading is visible</h3>
+        <h2 class="b">This heading is hidden</h2>
+        <p>The hidden heading still occupies the space.</p>
+    </div>
 </body>
 </html>
