--- a/index.html
+++ b/index.html
@@ -119,12 +119,10 @@
     <hr>
     <div class="Dposition">
         <h2>Position concept</h2>
-        <div class="static">
-            This element has position as static hence margin properties are not visible;
-            </div>
-        <div class="relative">
-            This div element has position as relative hence left margin is applied;
-            </div>
+
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.<div class="static">This element has position as static</div>Perferendis tempore odit soluta qui optio id, veniam dolorum eaque voluptate nesciunt.</p>
+        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit.<div class="relative">This element has position as relative</div>Perferendis tempore odit soluta qui optio id, veniam dolorum eaque voluptate nesciunt.</p>
+        
     </div>
     <hr>
     <div class="float">
